# pkgman

./: .editorconfig  Cargo.toml  README.md  acl_homepage.html
.github/: CONTRIBUTING.md
.github/workflows/: clippy.yml
src/: app.rs  config.rs  event.rs  handlers.rs  main.rs  theme.rs  ui.rs
