[package]
name = "pkgtui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.37", features = ["full"] }
unicode-width = "0.1"
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
